# vacro

./: .gitignore  Cargo.toml  README_CN.md  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
crates/crates/vacro-trace/tests/fixture/src/: lib.rs
crates/vacro-analysis/: Cargo.toml
crates/vacro-analysis/src/: lib.rs
crates/vacro-cli/: Cargo.toml  README.md  README_CN.md
crates/vacro-cli/src/: app.rs  data.rs  main.rs  syntax.rs  ui.rs  widgets.rs
crates/vacro-cli/src/app/: enums.rs  handlers.rs
crates/vacro-cli/src/docs/: en.md  zh_cn.md
crates/vacro-cli/src/widgets/: expansion_panel.rs  session_list.rs  viewer.rs
crates/vacro-doc-i18n/: Cargo.toml  readme.md
crates/vacro-doc-i18n/src/: lib.rs
crates/vacro-parser/: Cargo.toml  README_CN.md  readme.md
crates/vacro-parser-macro/: Cargo.toml
crates/vacro-parser-macro/src/: codegen.rs  lib.rs  scope_context.rs  utils.rs
crates/vacro-parser-macro/src/ast/: capture.rs  input.rs  keyword.rs  meta.rs  node.rs
crates/vacro-parser-macro/src/codegen/: logic.rs  output.rs  utils.rs
crates/vacro-parser-macro/src/codegen/logic/: capture.rs  input.rs  keyword.rs  pattern.rs
crates/vacro-parser-macro/src/syntax/: capture.rs  context.rs  input.rs  keyword.rs  pattern.rs
crates/vacro-parser/src/: __private.rs  ast.rs  lib.rs  syntax.rs
crates/vacro-parser/src/ast/: capture.rs  keyword.rs  node.rs
crates/vacro-parser/src/codegen/logic/: capture.rs
crates/vacro-parser/src/docs/: en.md  zh_cn.md
crates/vacro-parser/src/syntax/: capture.rs  pattern.rs
crates/vacro-parser/src/transform/: lookahead.rs
crates/vacro-parser/tests/: test_bind.rs  test_define.rs
crates/vacro-report/: Cargo.toml  README.md  README_CN.md
crates/vacro-report-macro/: Cargo.toml
crates/vacro-report-macro/src/: impls.rs  lib.rs  utils.rs
crates/vacro-report-macro/src/impls/: help.rs  parse_quote.rs  scope.rs
crates/vacro-report/src/: __private.rs  lib.rs
crates/vacro-report/src/docs/: en.md  zh_cn.md
crates/vacro-report/tests/: test.rs
crates/vacro-report/tests/macros/: Cargo.toml
crates/vacro-report/tests/macros/src/: lib.rs
crates/vacro-report/tests/macros/tests/: test.rs
crates/vacro-report/tests/ui/: help.rs  help.stderr  parse_quote.rs  parse_quote.stderr  parse_quote_spanned.rs  parse_quote_spanned.stderr  parser.rs  parser.stderr
crates/vacro-trace/: Cargo.toml  README.md  README_CN.md
crates/vacro-trace-macro/: Cargo.toml
crates/vacro-trace-macro/src/: impls.rs  lib.rs  utils.rs
crates/vacro-trace-macro/src/impls/: instrument.rs  log.rs  snapshot.rs
crates/vacro-trace/src/: __private.rs  lib.rs
crates/vacro-trace/src/__private/: cargo.rs  constant.rs  error.rs  model.rs  states.rs  utils.rs
crates/vacro-trace/src/docs/: en.md  zh_cn.md
crates/vacro-trace/tests/: e2e.rs
crates/vacro-trace/tests/fixture/: Cargo.toml
crates/vacro-trace/tests/fixture/src/: lib.rs
docs/: doc-i18n.html
src/: ast.rs  codegen.rs  impls.rs  lib.rs  parser.rs  syntax.rs  transform.rs
src/ast/: capture.rs  input.rs  keyword.rs  meta.rs  node.rs  pattern.rs
src/codegen/: logic.rs  output.rs
src/codegen/logic/: capture.rs  input.rs  pattern.rs
src/docs/: en.md  zh_cn.md
src/parser/: capture.rs  capture_group.rs  input.rs  keyword.rs  output.rs  pattern.rs
src/syntax/: capture.rs  context.rs  input.rs  keyword.rs  pattern.rs
src/transform/: lookahead.rs
tests/: test_bind.rs  test_define.rs
tests/test-usage-facade/: Cargo.toml
tests/test-usage-facade/src/: lib.rs
tests/test-usage-facade/tests/: test.rs
tests/test-usage-standalone/: Cargo.toml
tests/test-usage-standalone/src/: lib.rs
tests/test-usage-standalone/tests/: test.rs
vacro-core/: Cargo.toml
vacro-doc-i18n/: Cargo.toml
vacro-doc-i18n/src/: lib.rs
vacro-report/: Cargo.toml
vacro-report-macro/: Cargo.toml
vacro-report-macro/src/: impls.rs
vacro-trace/: Cargo.toml
vacro-trace-macro/: Cargo.toml
vacro-trace-macro/src/: lib.rs  trace.rs
vacro-trace/src/: lib.rs
