[package]
name = "vacro"
version = "0.2.1"
edition = "2021"
description = "A progressive DevX framework for building Rust procedural macros. Painless parsing, visual debugging, and robust tooling."
documentation = "https://docs.rs/vacro"
readme = "readme.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["macros", "proc-macro", "syn"]
categories = ["development-tools::procedural-macro-helpers"]

[package.metadata.docs.rs]
features = ["extra-traits", "doc-all", "full"]
rustdoc-args = ["--html-in-header", "doc-i18n.html"]

[workspace]
members = [
  "crates/vacro-analysis",
  "crates/vacro-cli",
  "crates/vacro-doc-i18n",
  "crates/vacro-parser",
  "crates/vacro-parser-macro",
  "crates/vacro-report",
  "crates/vacro-report-macro",
  "crates/vacro-report/tests/macros",
  "crates/vacro-trace",
  "crates/vacro-trace/tests/fixture", "tests/test-usage-facade", "tests/test-usage-standalone",
]

[workspace.dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0"
quote = "1.0"
rust-format = { version = "0.3.4", features = ["pretty_please", "token_stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
trybuild = "1.0"

[dependencies]
vacro-doc-i18n = { path = "./crates/vacro-doc-i18n", version = "0.2.0" }
vacro-parser = { path = "./crates/vacro-parser", version = "0.1.4", default-features = false, optional = true }
vacro-report = { path = "./crates/vacro-report", version = "0.1.3", default-features = false, optional = true }
vacro-trace = { path = "./crates/vacro-trace", version = "0.1.2", default-features = false, features = [
  "macros"
], optional = true }

[dev-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
doc-all = [
  "vacro-doc-i18n/doc-all",
  "vacro-parser/doc-all",
  "vacro-report/doc-all",
  "vacro-trace/doc-all"
]
doc-cn = [
  "vacro-doc-i18n/doc-cn",
  "vacro-parser/doc-cn",
  "vacro-report/doc-cn",
  "vacro-trace/doc-cn"
]
doc-en = [
  "vacro-doc-i18n/doc-en",
  "vacro-parser/doc-en",
  "vacro-report/doc-en",
  "vacro-trace/doc-en"
]
extra-traits = ["vacro-parser/extra-traits"]
full = ["parser", "report", "trace"]
parser = ["dep:vacro-parser", "vacro-report?/parser"]
report = ["dep:vacro-report"]
trace = ["dep:vacro-trace"]
