[package]
name = "vacro-cli"
version = "0.1.1"
edition = "2021"
description = "TUI visualization tool for inspecting Vacro toolkits."
readme = "README.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["cli", "debug", "proc-macro", "tui", "visualization"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "cargo-vacro"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
similar = "2.7.0"
syntect = "5.2"
unicode-width = "0.1"
vacro-analysis = { path = "../vacro-analysis", version = "0.1.0" }
vacro-trace = { path = "../vacro-trace", version = "0.1.2", default-features = false, features = [
  "types"
] }

[features]
test = []
