[package]
name = "vacro-doc-i18n"
version = "0.1.1"
edition = "2021"
description = "Doc i18n filter for Rustdoc/IDE via #[doc_i18n]."
documentation = "https://docs.rs/vacro-doc-i18n"
readme = "readme.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["i18n", "macros", "proc-macro", "rust-doc"]
categories = ["internationalization", "parsing"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
doc-all = []
doc-cn = []
doc-en = []
