[package]
name = "vacro-parser-macro"
version = "0.1.6"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.2.0" }

[features]
default = ["extra-traits"]
doc-all = ["vacro-doc-i18n/doc-all"]
doc-cn = ["vacro-doc-i18n/doc-cn"]
doc-en = ["vacro-doc-i18n/doc-en"]
extra-traits = ["syn/extra-traits"]
standalone = []
