[package]
name = "vacro-parser"
version = "0.1.6"
edition = "2021"
description = "A declarative parsing library for Rust procedural macros, simplifying input handling."
documentation = "https://docs.rs/vacro-parser"
readme = "readme.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["macros", "parsing", "proc-macro", "syn"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[package.metadata.docs.rs]
features = ["doc-all"]
rustdoc-args = ["--html-in-header", "doc-i18n.html"]

[dependencies]
proc-macro2 = { workspace = true }
vacro-parser-macro = { path = "../vacro-parser-macro", version = "0.1.6" }

[dev-dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
trybuild = { workspace = true }
vacro = { path = "../../", features = ["full"] }

[features]
default = ["standalone"]
doc-all = ["vacro-parser-macro/doc-all"]
doc-cn = ["vacro-parser-macro/doc-cn"]
doc-en = ["vacro-parser-macro/doc-en"]
extra-traits = ["vacro-parser-macro/extra-traits"]
standalone = ["vacro-parser-macro/standalone"]
