[package]
name = "vacro-parser"
version = "0.1.8"
edition = "2021"
description = "A declarative parsing library for Rust procedural macros, simplifying input handling."
documentation = "https://docs.rs/vacro-parser"
readme = "readme.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["macros", "parsing", "proc-macro", "syn"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[package.metadata.docs.rs]
features = ["doc-all"]
rustdoc-args = ["--html-in-header", "doc-i18n.html"]

[dependencies]
proc-macro2 = { workspace = true }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.2.0" }
vacro-parser-macro = { path = "../vacro-parser-macro", version = "0.1.8" }

[dev-dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
trybuild = { workspace = true }
vacro-report = { path = "../vacro-report", version = "0.1" }

[features]
doc-all = ["vacro-doc-i18n/doc-all"]
doc-cn = ["vacro-doc-i18n/doc-cn"]
doc-en = ["vacro-doc-i18n/doc-en"]
extra-traits = ["vacro-parser-macro/extra-traits"]
