[package]
name = "vacro-report-macro"
version = "0.1.0"
edition = "2021"
description = "Internal macro implementation for vacro-report."
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["internal", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit-mut"] }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.1.0" }

[features]
standalone = []
