[package]
name = "vacro-report"
version = "0.1.3"
edition = "2021"
description = "Diagnostic reporting enhancements for Rust procedural macros, improving error messages."
documentation = "https://docs.rs/vacro-report"
readme = "README.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["diagnostics", "error-reporting", "macros", "proc-macro", "syn"]
categories = [
  "development-tools::debugging",
  "development-tools::procedural-macro-helpers"
]

[package.metadata.docs.rs]
features = ["doc-all"]
rustdoc-args = ["--html-in-header", "doc-i18n.html"]

[dependencies]
proc-macro2 = "1.0"
quote = { workspace = true }
rust-format = { workspace = true }
syn = { version = "2.0", features = ["full", "visit-mut"] }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.2.0" }
vacro-report-macro = { path = "../vacro-report-macro", version = "0.1.3" }

[dev-dependencies]
macros = { path = "./tests/macros" }
trybuild = { workspace = true }

[features]
default = ["standalone"]
doc-all = ["vacro-doc-i18n/doc-all"]
doc-cn = ["vacro-doc-i18n/doc-cn"]
doc-en = ["vacro-doc-i18n/doc-en"]
parser = ["vacro-report-macro/parser"]
standalone = ["vacro-report-macro/standalone"]
