[package]
name = "vacro-trace-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
vacro = { path = "../..", features = ["report"] }

[features]
default = []
standalone = []
