[package]
name = "vacro-trace-macro"
version = "0.1.2"
edition = "2021"
description = "Internal macro implementation for vacro-trace."
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["internal", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
uuid = { version = "1.19.0", features = ["v4"] }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.2.0" }

[dev-dependencies]
vacro = { path = "../../", features = ["full"] }

[features]
doc-all = ["vacro-doc-i18n/doc-all"]
doc-cn = ["vacro-doc-i18n/doc-cn"]
doc-en = ["vacro-doc-i18n/doc-en"]
standalone = []
