[package]
name = "vacro-trace"
version = "0.1.2"
edition = "2021"
description = "Observability, tracing, and snapshot debugging for Rust procedural macros."
documentation = "https://docs.rs/vacro-trace"
readme = "README.md"
repository = "https://github.com/FeVeR-Store/vacro"
license = "MIT OR Apache-2.0"
keywords = ["debug", "macros", "proc-macro", "snapshot", "tracing"]
categories = [
  "development-tools::debugging",
  "development-tools::procedural-macro-helpers"
]

[package.metadata.docs.rs]
features = ["doc-all"]
rustdoc-args = ["--html-in-header", "doc-i18n.html"]

[dependencies]
quote = { workspace = true }
rust-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
vacro-doc-i18n = { path = "../vacro-doc-i18n", version = "0.1.1" }
vacro-trace-macro = { path = "../vacro-trace-macro", version = "0.1.2", optional = true }

[features]
default = ["standalone"]
doc-all = ["vacro-trace-macro/doc-all"]
doc-cn = ["vacro-trace-macro/doc-cn"]
doc-en = ["vacro-trace-macro/doc-en"]
macros = ["dep:vacro-trace-macro"]
standalone = ["macros", "vacro-trace-macro/standalone"]
types = []
